--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,7 +24,8 @@ $default-transition: .3s ease-in-out;
 
 
 $grid-breakpoints: (
-  xs: 0,
+  xxs: 0,
+  xs: 375px,
   sm: 576px,
   md: 768px,
   lg: 992px,
